--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -2,61 +2,49 @@ name: Elixir CI
 
 on:
   push:
-    branches: ['master']
+    branches: [main]
   pull_request:
-    branches: ['master']
+    branches: [main]
+
+env:
+  MIX_ENV: test
 
 permissions:
   contents: read
 
 jobs:
-  test:
+  build:
+    name: Build and test
+    runs-on: ubuntu-latest
+
     strategy:
       matrix:
-        include:
-          - elixir: 1.10.4
-            otp: 23.3.4.18
-            runs-on: ubuntu-18.04
-          - elixir: 1.11.4
-            otp: 24.3.4.7
-            runs-on: ubuntu-22.04
-          - elixir: 1.12.3
-            otp: 24.3.4.7
-            runs-on: ubuntu-22.04
-          - elixir: 1.13.4
-            otp: 25.2
-            runs-on: ubuntu-22.04
-          - elixir: 1.14.2
-            otp: 24.3.4.7
-            runs-on: ubuntu-22.04
-          - elixir: 1.14.2
-            otp: 25.2
-            runs-on: ubuntu-22.04
-
-    name: Build and test
-    runs-on: ${{ matrix.runs-on }}
-
-    env:
-      MIX_ENV: test
-
+        elixir: ['1.14.5', '1.15.4', '1.16.3', '1.17.3']
+        erlang: ['24.3', '25.3', '26.0', '27.1']
+        exclude:
+          - elixir: '1.14.5'
+            erlang: '27.1'
+          - elixir: '1.15.4'
+            erlang: '27.1'
+          - elixir: '1.16.3'
+            erlang: '27.1'
+          - elixir: '1.17.3'
+            erlang: '24.3'
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
       - name: Set up Elixir
         uses: erlef/setup-beam@v1
         with:
+          version-type: 'loose'
           elixir-version: ${{ matrix.elixir }}
-          otp-version: ${{ matrix.otp }}
+          otp-version: ${{ matrix.erlang }}
       - name: Restore dependencies cache
         uses: actions/cache@v3
         with:
           path: deps
-          key: ${{ runner.os }}-${{ matrix.otp }}-${{ matrix.elixir }}-mix-${{ hashFiles('**/mix.lock') }}
-          restore-keys: ${{ runner.os }}-${{ matrix.otp }}-${{ matrix.elixir }}-mix-
-      - name: mix-deps
-        if: steps.mix-cache.outputs.cache-hit != 'true'
-        run: |
-          mix local.rebar --force
-          mix local.hex --force
-          mix deps.get
+          key: ${{ runner.os }}-${{ matrix.erlang }}-${{ matrix.elixir }}-mix-${{ hashFiles('**/mix.lock') }}
+          restore-keys: ${{ runner.os }}-${{ matrix.erlang }}-${{ matrix.elixir }}-mix-
+      - name: Install dependencies
+        run: mix deps.get
       - name: Run tests
         run: mix test
